[package]
name = "evm-bigtable-context"
version = "0.1.0"
edition = "2018"

[[bin]]
name="bigtable-test"

[dependencies]
evm-state= {path="../evm-state"}
solana-storage-bigtable= {path="../../storage-bigtable"}
log="0.4"
snafu="0.6"
hex="0.4"
rlp ="0.5.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
env_logger = "0.9"
sha3 = "0.9.1"
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
solana-runtime = { path = "../../runtime", version = "=1.6.14" }
dashmap = "4.0"
rayon="1.5"
solana-evm-loader-program={path = "../programs/evm_loader"}
solana-sdk={path = "../../sdk"}